Added some comments for FNN

--- a/FNN.ipynb
+++ b/FNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "12bffa17",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "766148ec",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "132d31f3",
    "metadata": {},
    "outputs": [
@@ -59,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5649fb09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f2dbbc8c6d0>"
+       "<torch._C.Generator at 0x7f70a9b0dad0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d35769ea",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "    def __init__(self, input_size, hidden_size, num_classes):\n",
     "        super(FNNmodel, self).__init__()\n",
     "        # Linear -> NonLinear -> Linear\n",
-    "        ''' Frist Layer      dimensions: 8 -> 7 '''\n",
+    "        ''' First Layer      dimensions: 8 -> 7 '''\n",
     "        #linear function - FC1\n",
     "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
     "        #nonlinear function\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0c72857a",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "53a3c03e",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object Module.parameters at 0x7f2dba5c8970>\n",
+      "<generator object Module.parameters at 0x7f6fda2cb430>\n",
       "4\n",
       "torch.Size([7, 8])\n",
       "torch.Size([7])\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "03d5aaa9",
    "metadata": {},
    "outputs": [
@@ -196,19 +196,19 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Evaluating the model\n",
+    "# Evaluating the model/Shows layers and their activation function summary\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ee980bc4",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "35a91452",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c8c78436",
    "metadata": {},
    "outputs": [
@@ -293,18 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9d05342a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"model\")"
+    "torch.save(model.state_dict(), \"Saved Models/FNN\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820e9b93",
+   "id": "3072448f",
    "metadata": {},
    "outputs": [],
    "source": []
