--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4f8fd7f-15e6-4e1f-8729-a314f4ef9bb9",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ea737a7-7c84-47d2-9ca9-5e7ffdfa3f82",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "50211264-d8e7-4eec-bbe7-ea80311dfb01",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fa223131-bf64-47c8-93bb-fbc8602ea100",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Taining the model\n",
     "clf =svm.SVC()\n",
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c96d3cc8-fc26-42c4-9d6b-07f4c80f1cbf",
    "metadata": {},
    "outputs": [],
@@ -68,10 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cfee2cd0-84f4-4390-aafd-2a77b138e5f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model is : 82.6%\n"
+     ]
+    }
+   ],
    "source": [
     "# Accuracy :\n",
     "accuracy = sklearn.metrics.accuracy_score(y_test, y_pred, normalize=True, sample_weight=None)\n",
